# fine-tuning-os

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .tool-versions  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  Justfile  LICENSE  NOTICE  README.md  REUSE.toml  SECURITY.md  commitlint.config.js  lefthook.yml  mise.toml  mutation_results.txt  pyproject.toml  release-please-config.json  renovate.json  ruleset.json
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  osv-scanner.yml  release-please.yml  sbom-attest.yml  scorecard.yml
docs/: demo-bundle.md
docs/adr/: 0000-adr-template.md  0001-zero-data-tool-taxonomy.md  0002-modular-register-tool-pattern.md  0003-execution-boundary-no-ml-deps.md  0004-result-envelope-and-sanitize-boundary.md  0005-stdio-transport-json-store.md  README.md
docs/superpowers/plans/: 2026-05-29-fine-tuning-os-lot1-socle.md  2026-05-30-fine-tuning-os-lots2-9.md
docs/superpowers/specs/: 2026-05-29-fine-tuning-os-design.md
scripts/: demo_bundle.py  run_mutation.py
skills/fine-tuning-os/: SKILL.md
skills/fine-tuning-os/references/: 01-preparation.md  02-synthetic-data.md  03-pipeline.md  04-execution.md  05-evaluation.md  06-security-audit.md  07-packaging-delivery.md  08-docs-contracts.md  09-client-relations.md  10-maintenance.md  checklists.md  legal-compliance.md  pricing-packaging.md  sota-may-2026.md  troubleshooting.md  zero-data-invariants.md
src/fine_tuning_os/: __init__.py  __main__.py  crypto.py  envelope.py  models.py  render.py  sanitize.py  server.py  store.py  targets.py  templating.py
src/fine_tuning_os/templates/business/: invoice.md.j2  status_update.md.j2
src/fine_tuning_os/templates/configs/: axolotl.yaml.j2  custom.yaml.j2  unsloth.yaml.j2
src/fine_tuning_os/templates/docker/: Dockerfile.infer.j2  Dockerfile.train.j2  compose.yaml.j2
src/fine_tuning_os/templates/docs/: deployment_guide.md.j2  perf_report.md.j2  user_guide.md.j2
src/fine_tuning_os/templates/legal/: contract.md.j2  delivery_note.md.j2  destruction_cert.md.j2  nda.md.j2
src/fine_tuning_os/templates/train/: split.py.j2  train.py.j2
src/fine_tuning_os/tools/: __init__.py  client.py  docs.py  evaluation.py  execution.py  maintenance.py  packaging.py  pipeline.py  prep.py  security.py  synthetic.py
tests/: conftest.py  test_client.py  test_crypto.py  test_demo_bundle.py  test_docs.py  test_envelope.py  test_error_paths.py  test_evaluation.py  test_execution.py  test_live_integration.py  test_main.py  test_maintenance.py  test_mcp_live.py  test_models.py  test_packaging.py  test_pipeline.py  test_prep.py  test_property.py  test_registration.py  test_render.py  test_sanitize.py  test_security.py  test_server.py  test_store.py  test_synthetic.py  test_targets.py  test_zero_data.py
