[project]
name = "fine-tuning-os"
version = "0.1.0"
description = "Zero-Data fine-tuning operations MCP server: 64 domain tools across the full LLM fine-tuning delivery lifecycle"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "pydantic>=2.6.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0",
    "paramiko>=3.0.0",
    "markdown>=3.6",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
pdf = ["weasyprint>=62"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "black>=24.0", "ruff>=0.4"]

[project.scripts]
fine-tuning-os = "fine_tuning_os.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fine_tuning_os"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/fine_tuning_os"]
omit = ["src/fine_tuning_os/templates/*"]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
