[project]
name = "fine-tuning-os"
version = "0.2.0"
description = "Zero-Data fine-tuning operations MCP server: 64 domain tools across the full LLM fine-tuning delivery lifecycle"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "pydantic>=2.6.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0",
    "paramiko>=3.0.0",
    "markdown>=3.6",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
pdf = ["weasyprint>=62"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.3",
    "black>=24.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-paramiko",
    "types-Markdown",
    "types-PyYAML",
    "hypothesis>=6.100",
    "mutmut>=2.5",
    "build>=1.0",
    "twine>=5.0",
    "aiosmtpd>=1.4",
]

[project.scripts]
fine-tuning-os = "fine_tuning_os.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fine_tuning_os"]
# Ensure py.typed (PEP 561) and Jinja2 templates are bundled in the wheel.
artifacts = [
    "src/fine_tuning_os/py.typed",
    "src/fine_tuning_os/templates/**",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
markers = [
    "integration: marks tests as real-infra integration tests (skipped in unit runs)",
]

[tool.coverage.run]
source = ["src/fine_tuning_os"]
omit = ["src/fine_tuning_os/templates/*"]

[tool.coverage.report]
fail_under = 95

[tool.mutmut]
paths_to_mutate = "src/fine_tuning_os/sanitize.py:src/fine_tuning_os/crypto.py:src/fine_tuning_os/targets.py:src/fine_tuning_os/envelope.py"
tests_dir = "tests/"
runner = "python -m pytest -x -q"

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.10"
strict = true
# ignore_missing_imports is intentionally NOT set globally — see per-module overrides below.
exclude = ["src/fine_tuning_os/templates/"]

# Third-party libs that genuinely ship no stubs and no py.typed marker.
# mcp: dynamic MCP SDK with no shipped stubs.
# weasyprint: optional PDF dep, may not be installed.
[[tool.mypy.overrides]]
module = ["mcp.*", "weasyprint.*"]
ignore_missing_imports = true
